samples/_failures_safe/1761696546_293a14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47bdeb41.c: In function ‘print_stats’:
./samples/SAFE/__tmp_47bdeb41.c:133:12: error: missing terminating " character
  133 |     printf("
      |            ^
./samples/SAFE/__tmp_47bdeb41.c:133:5: error: expected expression at end of input
  133 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_47bdeb41.c:133:5: error: expected declaration or statement at end of input
